--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   registry:
     image: registry:2
     container_name: registry
+    network_mode: "host"
     ports:
       - "5000:5000"
     volumes:
